--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,12 +10,33 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
-
+ *= require font-awesome
  *= require_tree .
  *= require_self
+
  */
 
 
 
 
+.no-right-padding{
+	padding-right: 0 !important;
 
+}
+
+
+.no-left-padding{
+	padding-left: 0 !important;
+	
+}
+
+
+.results-block {
+
+	display: : inline-block;
+}
+
+.user-name{
+	margin-top:  3.5%;
+	padding-right: 5px;
+}
